--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
+  Home: /blog
+  Archives: /blog/archives
   Github: http://www.github.com/troywith77
-  About: http://tangrui.win/dove/resume/
+  About: http://tangrui.win
+  Mail me: mailto:ruitang307@gmail.com
 rss: /atom.xml
 
 # Content
@@ -12,6 +13,4 @@ fancybox: true
 
 # Miscellaneous
 google_analytics:
-favicon: /favicon.ico
-
-duoshuo_shortname: troywith77
+favicon: /blog/favicon.ico
